--- a/README
+++ b/README
@@ -1,16 +1,11 @@
 Geographic Data & Model Software (GeoDMS) is a platform for developing Geographic Planning Support Systems. 
 
-This folder contains the C++ and Delphi source code to compile the GeoDMS.
+This folder contains the C++ and a bit of Delphi source code to compile the GeoDMS.
 
 Documentation on installing and using the Geographic Data & Model Server software can be found at:
-http://www.ObjectVision.nl/geodms/
-
-
-See readme-dms.txt for technical info about compiling the GeoDMS
-
+http://www.geodms.nl/
 
 The contained code is (c) Object Vision BV, unless stated otherwise, 
-
 
 This open source software; you can use, redistribute, and/or
 modify it under the terms of the GNU General Public License version 2 
@@ -19,7 +14,7 @@ on the condition that this readme file is provided and all copyright
 notices in the source code are preserved.
 
 See LICENSE.TXT for terms of distribution or look at our web site:
-http://www.objectvision.nl/geodms/software/license-and-disclaimer
+https://www.geodms.nl/Licence
 or alternatively at: http://www.gnu.org/copyleft/gpl.html
 
 You can use, redistribute and/or modify this library source code file
@@ -38,16 +33,11 @@ Additional to the terms of the license, we request you to apply the following
 guidelines (these additional requests are not limiting your rights under the terms of the license):
 - An appropriate copyright notice that an interactive program/web-site
   containing or using the GeoDMS in a start splash-screen/page and/or about-box (if any), is:
-  "This software/web-site is using the Geographic Data & Model Server (GeoDMS)
-   Copyright (c) 2006-2012 Object Vision BV.
-   For documentation, source code, and license rights, see:
-   http://www.objectVision.nl/geodms/
-   The GeoDMS is licensed WITHOUT ANY WARRANTY. Specific warranties can be granted
-   by an additional written contract for support, assistance and/or development"
+  "This software/web-site is using the Geographic Data & Model Server (GeoDMS)"
 - Before distributing the GeoDMS library and/or work containing it to others, 
-  pease check at our web-site to see if any newer version has been made available.
+  please check if any newer version has been made available and/or refer to the most up to date github repository.
 - We would like to be notified when you make any modification to the source code 
-  and would like to receive your modifications: mhilferink@ObjectVision.nl
+  and would like to receive your modifications as pull-request
 - In case of bug-fixes and small additions, we might or might not use the contributors
   improvements in a possible future version of the DMS without notification of
   the contributors modification, however when the contributor distributes the DMS source code 
@@ -61,10 +51,8 @@ guidelines (these additional requests are not limiting your rights under the ter
   Object Vision will remain the author of the included GeoDMS source code.
 
 Object Vision BV
-p/a CIMO - Vrije Universiteit
-De Boelelaan 1085 
+De Boelelaan 1085 - F 532
 1081 HV  AMSTERDAM - the Netherlands
 t: +31-20-598.9083
 w: www.ObjectVision.Nl/
-e: mhilferink@objectvision.nl
-
+e: info@objectvision.nl
